src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700;800;900&display=swap');

body {
  font-family: 'Inter', sans-serif;
  -webkit-font-smoothing: antialiased;
}

/* width */
.category-scrollbar::-webkit-scrollbar {
  height: 5px;
}

/* Track */
.category-scrollbar::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
.category-scrollbar::-webkit-scrollbar-thumb {
  background: #dddddd;
  border-radius: 5px;
}

/* Handle on hover */
.category-scrollbar::-webkit-scrollbar-thumb:hover {
  background: #555;
}

